@@ -289,3 +289,7 @@ Version 0.0.1:
 287/ Implemented test guard mechanic for sword.
 288/ Follow up with 287 changes, add in a small parry mechanic.
 289/ Organized code.
+290/ Reworked Wood sword to be much better.
+291/ Deleted 2 Token of Pride upgrade perk.
+292/ Deleted Agumentation chance, enchantment chance and transmutation chance from PlayerStatsHandler.
+293/ Nerf Alchemist's Book, capped the "Having active buff will increase your stats" effect to 3 buffs.
